add ProductData and updated PropertyData, and the controllers
